--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
-    <title>For Fun</title>
+    <link rel="icon" type="png" href="favicon.png">
+    <audio src="youLose.mp3" id="loose-audio"></audio>
+    <audio src="youWon.mp3" id="won-audio"></audio>
+    <audio src="GameDraw.mp3" id="draw-audio"></audio>
+    <title>Scissor, Paper and Rock Game</title>
 </head>
 <body>
     <div id="container">
@@ -16,12 +20,12 @@
                     <strong>Choose Your Move</strong>
                 </div>
                 <div class="img-container" id="user-img">
-                    <div class="user-choice" id="scissor"><img src="scissor.jpg" alt="Scissor"></div>
-                    <div class="user-choice" id="paper"><img src="paper.jpg" alt="Paper"></div>
-                    <div class="user-choice" id="rock"><img src="rock.jpg" alt="Rock"></div>
+                    <div class="user-choice" id="Scissor"><img src="scissor.jpg" alt="Scissor"></div>
+                    <div class="user-choice" id="Paper"><img src="paper.jpg" alt="Paper"></div>
+                    <div class="user-choice" id="Rock"><img src="rock.jpg" alt="Rock"></div>
                 </div>
                 <div class="score">
-                    <strong>Your Score is: <p  id="user-id"> 0</p></strong>
+                    <strong>Your Score is: <p  id="user-score"> 0</p></strong>
                 </div>
             </div>
             <div id="computer-container">
@@ -32,11 +36,11 @@
                     <div class="computer-choice"></div>
                 </div>
                 <div class="score">
-                    <strong>Computer Score is: <p  id="user-id"> 0</p></strong>
+                    <strong>Computer Score is: <p  id="comp-score"> 0</p></strong>
                 </div>
             </div>
         </div>
     </div>
-    <script src="scritp.css"></script>
+    <script src="scritp.js"></script>
 </body>
 </html>
